<resources>
  <string name="quick_toggle">Toggle</string>
  <string name="misc_cat">Misc</string>
  <string name="profile">Profile</string>
  <string name="profile_summary">Switch to another profile or add new profiles</string>
  <string name="nat">NAT mode (deprecated)</string>
  <string name="nat_summary">Use NAT mode instead of VPN mode. Requires ROOT permission.</string>
  <string name="remote_dns">Remote DNS</string>
  <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s/s\nReceived: \t%4$s\t↓\t%2$s/s</string>
  <string name="stat_profiles">%1$s↑\t%2$s↓</string>
  <string name="traffic_summary">%1$s/s↑\t%2$s/s↓</string>
  <plurals name="bytes">
    <item quantity="one">Byte</item>
    <item quantity="other">Bytes</item>
  </plurals>
  <string name="connection_test_pending">Check Connectivity</string>
  <string name="connection_test_testing">Testing…</string>
  <string name="connection_test_available">Success: %dms latency</string>
  <string name="connection_test_error">Fail to detect internet connection: %s</string>
  <string name="connection_test_fail">Internet Unavailable</string>
  <string name="connection_test_error_status_code">Error code: #%d</string>
  <string name="proxy_cat">Server Settings</string>
  <string name="profile_name">Profile Name</string>
  <string name="proxy">Server</string>
  <string name="remote_port">Remote Port</string>
  <string name="port">Local Port</string>
  <string name="sitekey">Password</string>
  <string name="enc_method">Encrypt Method</string>
  <string name="feature_cat">Feature Settings</string>
  <string name="ipv6">IPv6 Route</string>
  <string name="ipv6_summary">Redirect IPv6 traffic to remote</string>
  <string name="onetime_auth">One-time Authentication</string>
  <string name="onetime_auth_summary">Enable one-time authentication</string>
  <string name="route_list">Route</string>
  <string name="route_entry_all">All</string>
  <string name="route_entry_bypass_lan">Bypass LAN</string>
  <string name="route_entry_bypass_chn">Bypass mainland China</string>
  <string name="route_entry_bypass_lan_chn">Bypass LAN &amp; mainland China</string>
  <string name="route_entry_gfwlist">GFW List</string>
  <string name="route_entry_chinalist">China List</string>
  <string name="proxied_apps">Per-App Proxy</string>
  <string name="proxied_apps_summary">Set proxy for selected apps, requires NAT mode under Android 4.x</string>
  <string name="proxied_apps_summary_v21">Set proxy for selected apps</string>
  <string name="on">On</string>
  <string name="bypass_apps">Bypass Mode</string>
  <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
  <string name="auto_connect">Auto Connect</string>
  <string name="auto_connect_summary">Enable Shadowsocks on startup</string>
  <string name="tcp_fastopen_summary">Toggling requires ROOT permission</string>
  <string name="tcp_fastopen_summary_unsupported">Unsupported kernel version: %s &lt; 3.7.1</string>
  <string name="udp_dns">UDP Forwarding</string>
  <string name="udp_dns_summary">Forward UDP packets to remote</string>
  <string name="forward_success">Shadowsocks started.</string>
  <string name="invalid_server">Invalid server name</string>
  <string name="service_failed">Failed to connect the remote server</string>
  <string name="method_unsafe">WARNING: The current encryption method is unsafe</string>
  <string name="nat_deprecated">WARNING: NAT mode has been deprecated since Android 5.0</string>
  <string name="nat_no_root">NAT mode requires ROOT permission</string>
  <string name="switch_to_vpn">Switch to VPN mode</string>
  <string name="stop">Stop</string>
  <string name="stopping">Shutting down…</string>
  <string name="vpn_error">%s</string>
  <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
  <string name="profile_invalid_input">No valid profile data found.</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="close">Close</string>
  <string name="server_empty">Please select a server</string>
  <string name="proxy_empty">Proxy/Password should not be empty</string>
  <string name="connect">Connect</string>
  <string name="recovering">Resetting…</string>
  <string name="remove_profile">Remove this profile "%s"?</string>
  <string name="settings">Settings</string>
  <string name="faq">FAQ</string>
  <string name="faq_url">https://rallets.com/faq</string>
  <string name="recovery">Reset</string>
  <string name="about">About</string>
  <string name="agreement_title">Agreement</string>
  <string name="edit">Edit</string>
  <string name="share">Share</string>
  <string name="add_profile">Add Profile</string>
  <string name="action_apply_all">Apply Settings to All Profiles</string>
  <string name="action_export">Export to Clipboard</string>
  <string name="action_import">Import from Clipboard</string>
  <string name="action_export_msg">Successfully export!</string>
  <string name="action_export_err">Failed to export.</string>
  <string name="action_import_msg">Successfully import!</string>
  <string name="action_import_err">Failed to import.</string>
  <string name="profile_config">Profile config</string>
  <string name="unsaved_changes_prompt">Changes not saved. Do you want to save?</string>
  <string name="apply">Apply</string>
  <string name="delete">Remove</string>
  <string name="delete_confirm_prompt">Are you sure you want to remove this profile?</string>
  <string name="share_qr_nfc">QR code/NFC</string>
  <string name="add_profile_dialog">Add this Shadowsocks Profile?</string>
  <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
  <string name="add_profile_methods_manual_settings">Manual Settings</string>
  <string name="add_profile_scanner_not_installed">Please install any ZXing-compliant QR code scanning app.</string>
  <plurals name="removed">
    <item quantity="one">Removed</item>
    <item quantity="other">%d items removed</item>
  </plurals>
  <string name="undo">Undo</string>
  <string name="toggle_service_state">Start the service</string>
  <string name="start_service_default">Connect to the current server</string>
  <string name="start_service">Connect to %s</string>
  <string name="stop_service">Switch to %s</string>
  <string name="profile_default">Use the current profile</string>
  <string name="sent">Sent:</string>
  <string name="received">Received:</string>
  <string name="connecting">Connecting…</string>
  <string name="vpn_connected">Connected, tap to check connection</string>
  <string name="nat_connected">Connected</string>
  <string name="not_connected">Not connected</string>
  <string name="kcp_summary">Enable Shadowsocks over KCP</string>
  <string name="kcp_port">KCP Port</string>
  <string name="kcp_port_summary">%d (port number of the remote KCPTUN server)</string>
  <string name="kcpcli">KCP Parameters (CLI)</string>
  <string name="custom_rules">Custom rules</string>
  <string name="action_selection">Selection…</string>
  <string name="action_add_rule">Add rule(s)…</string>
  <string name="acl_rule_templates_generic">Subnet/Hostname PCRE pattern</string>
  <string name="acl_rule_templates_domain">Domain name and all its subdomain names</string>
  <string name="edit_rule">Edit rule</string>
    <string name="mobile">Mobile</string>
    <string name="nickname">Nickname</string>
    <string name="balance">Account Balance</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="flow">Flow</string>
    <string name="servers">Servers</string>
    <string name="max_logins">Maximum Logins</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="area">Your Area in China</string>
    <string name="NC">North China</string>
    <string name="SC">South China</string>
    <string name="WC">West China</string>
    <string name="EC">East China</string>
    <string name="CC">Central China</string>
    <string name="not_set">Not Set</string>
    <string name="save_failed">Save Failed</string>
    <string name="save_success">Save Success</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="left_premium_traffic">Left Premium Traffic</string>
    <string name="premium_traffic">Premium Traffic</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="go_back">Go Back</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_or_mobile">Email / Mobile</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="incorrect_email_or_mobile">Email or mobile number is not correct</string>
    <string name="incorrect_password">Your password is incorrect, which should contain at least 6 characters with at least 1 number and at least 1 alphebet</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="server_list">Server List</string>
    <string name="app_name">Rallets</string>
    <string name="screen_name" translatable="false">Rallets ▾</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout_title">Are you sure you want to logout?</string>
    <string name="referral_code">"Referral Code (Optional)"</string>
    <string name="unknown_error">There is an unknown error when %s, send an email to info@rallets.com about it and we will help you</string>
    <string name="retry_later">There is an unknown error, please try again later</string>
    <string name="dismatch_passwords">Password confirmation does not match password</string>
    <string name="find_password">"Find Password"</string>
    <string name="send_verification_code">"Send Verification Code"</string>
    <string name="already_sent">"Already Sent"</string>
    <string name="verification_code">"Verification Code"</string>
    <string name="submit">"Submit"</string>
    <string name="payments">"Payments"</string>
    <string name="wechat">"Wechat"</string>
    <string name="alipay">"Alipay"</string>
    <string name="payment_success">"Payment is Succeeded"</string>
    <string name="payment_fail">"Payment is Failed"</string>
    <string name="payment_cancel">"Payment is Cancelled"</string>
    <string name="payment_invalid">"Payment is Invalid"</string>
    <string name="reason">"Reason"</string>
    <string name="new_version_avaiable">"New version(V%s) of Rallets is now avaiable!"</string>
    <string name="notice">"Notice"</string>
    <string name="message_link">"Message Link"</string>
    <string name="new_message">"New Message"</string>
    <string name="yuan">"CNY"</string>
  <string name="rallets">Rallets</string>
  <string name="line">Line</string>
  <string name="current_line">Current Line</string>
  <string name="remaining">Remaining</string>
  <string name="discount">Discount</string>
  <string name="bill">Bill</string>
  <string name="coupon">Coupon</string>
  <string name="invite">Invite</string>
  <string name="coupon_hint">Enter coupon code</string>
  <string name="invite_hint">Get free traffic</string>
  <string name="querying">Querying</string>
  <string name="select_line">Select a line</string>
  <string name="outgoing">Outgoing</string>
  <string name="incoming">Incoming</string>
  <string name="current_speed">Speed</string>
  <string name="server_list_hint">Support Android/Windows/Mac/Linux</string>
  <string name="coming_soon">Coming soon</string>
  <string name="enter_coupon">Enter coupon code</string>
  <string name="use_coupon_success">Coupon used successfully</string>
  <string name="use_coupon_failed">Failed to use coupon</string>
  <string name="querying_data">Querying data...</string>
</resources>