<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.github.rallets">

    <be.mygod.preference.PreferenceCategory
            android:title="@string/proxy_cat">

        <be.mygod.preference.EditTextPreference
                android:key="profileName"
                android:summary="%s"
                android:title="@string/profile_name"/>
        <SwitchPreference
                android:key="isAuth"
                android:summary="@string/onetime_auth_summary"
                android:title="@string/onetime_auth"/>

    </be.mygod.preference.PreferenceCategory>

    <be.mygod.preference.PreferenceCategory
            android:title="@string/feature_cat">

        <DropDownPreference
                android:key="route"
                android:entries="@array/route_entry"
                android:entryValues="@array/route_value"
                android:summary="%s"
                android:title="@string/route_list"/>
        <be.mygod.preference.EditTextPreference
                android:key="remoteDns"
                android:title="@string/remote_dns"
                android:summary="%s"/>
        <SwitchPreference
                android:key="isIpv6"
                android:summary="@string/ipv6_summary"
                android:title="@string/ipv6"/>
        <SwitchPreference
                android:key="isProxyApps"
                android:summary="@string/proxied_apps_summary"
                android:title="@string/proxied_apps"/>
        <SwitchPreference
                android:key="isUdpDns"
                android:summary="@string/udp_dns_summary"
                android:title="@string/udp_dns"/>

    </be.mygod.preference.PreferenceCategory>
</PreferenceScreen>
