<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:icon="@drawable/ic_email_white_24dp"
            android:theme="@style/Theme.MaterialBase"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:layout_height="10px"
            android:title="@string/email"
            android:key="email"
    />
    <Preference
            android:icon="@drawable/ic_phone_android_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/mobile"
            android:key="mobile"
    />
    <Preference
            android:icon="@drawable/ic_battery_charging_full_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/left_premium_traffic"
            android:key="premiumTraffic"/>
    <Preference
            android:icon="@drawable/ic_people_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/invitation_code"
            android:key="invitationCode"/>
    <EditTextPreference
            android:icon="@drawable/ic_person_white_24dp"
            android:dialogIcon="@drawable/ic_person_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nickname"
            android:key="nickname"/>
    <ListPreference
            android:icon="@drawable/ic_place_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/area"
            android:entries="@array/area_names"
            android:entryValues="@array/area_values"
            android:key="area"/>
    <Preference
            android:icon="@drawable/ic_important_devices_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/max_logins"
            android:key="maxLogins"/>
    <Preference
            android:icon="@drawable/ic_attach_money_white_24dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/balance"
            android:key="balance"/>
</PreferenceScreen>
