<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialBase.White"
    android:background="@drawable/login_background"
    android:id="@+id/login">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent"
                  android:layout_gravity="center"
                  android:weightSum="1"
                  android:layout_marginTop="20dp"
                  android:gravity="center_horizontal"
                  android:paddingLeft="20px"
                  android:paddingRight="20px">

        <include layout="@layout/toolbar_light_dark" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            <EditText android:id="@+id/emailOrMobile"
                      style="@style/EditText"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:inputType="text"
                      android:maxLines="1"
                      android:hint="@string/email_or_mobile"
                      android:layout_weight="5"
            />
            <Button android:id="@+id/sendVerificationCodeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/send_verification_code"
                    android:textSize="10dp"
                    android:layout_weight="3"
            />
        </LinearLayout>

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:id="@+id/code"
                  android:maxLines="1"
                  android:hint="@string/verification_code" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:id="@+id/editTextPassword"
                  android:maxLines="1"
                  android:hint="@string/password" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:id="@+id/passwordConfirmation"
                  android:maxLines="1"
                  android:hint="@string/password_confirmation" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/submit"
                android:id="@+id/findPasswordButton"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"
                android:contextClickable="false" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
