<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialBase.White"
    android:background="@drawable/login_background"
    android:id="@+id/signup">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent"
                  android:layout_gravity="center"
                  android:weightSum="1"
                  android:layout_marginTop="20dp"
                  android:gravity="center_horizontal"
                  android:paddingLeft="20px"
                  android:paddingRight="20px">

        <include layout="@layout/toolbar_light_dark" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/emailOrMobile"
                  android:layout_gravity="center_horizontal"
                  android:inputType="text"
                  android:maxLines="1"
                  android:hint="@string/email_or_mobile" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:id="@+id/editTextPassword"
                  android:maxLines="1"
                  android:hint="@string/password" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:id="@+id/passwordConfirmation"
                  android:maxLines="1"
                  android:hint="@string/password_confirmation" />

        <TextView android:text="@string/area"
                  android:textColor="@color/green_5FF"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/textView" android:layout_marginTop="10dp"/>

        <Spinner style="@style/Widget.AppCompat.Spinner.Underlined"
                 android:id="@+id/area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/area_names"
                 android:popupBackground="@color/primary_500"
                 android:spinnerMode="dropdown"/>

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/referralCode"
                  android:maxLines="1"
                  android:inputType="text"
                  android:hint="@string/referral_code" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/signup"
                android:id="@+id/signupButton"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"
                android:contextClickable="false" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
