<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialBase.White"
    android:background="@drawable/login_background"
    android:id="@+id/login">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent"
                  android:layout_gravity="center"
                  android:weightSum="1"
                  android:layout_marginTop="20dp"
                  android:gravity="center_horizontal"
                  android:paddingLeft="20px"
                  android:paddingRight="20px">

        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/loginMessageTV"
                    android:textSize="24dp"
                    android:text="星际 RALLETS"
                    android:gravity="center" />
        </RelativeLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/emailOrMobile"
                  android:layout_gravity="center_horizontal"
                  android:inputType="text"
                  android:maxLines="1"
                  android:hint="@string/email_or_mobile" />

        <EditText style="@style/EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:id="@+id/password"
                  android:maxLines="1"
                  android:hint="@string/password" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"
                android:contextClickable="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/signup" />

            <Button
                android:id="@+id/findPasswordButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/find_password" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
